Changed svg local urls to github's urls

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
       </form>
     </div>
     <div class="features">
-      <div class="grid grid-item1"><img class="grid-img" src="/src/eye-free-icon-font.svg" alt=""> </div>
+      <div class="grid grid-item1"><img class="grid-img" src="https://raw.githubusercontent.com/messerschmitte/ferrari-landing-page/d5fcea8da8b41e94c290a6e7fad52dea8b1a5a7e/src/eye-free-icon-font.svg" alt=""> </div>
       <div class="grid grid-item2"><h3 class="feature-heading">Elegant</h3>
       <p class="feature-text">Even the British can't compete with us.</p></div>
-      <div class="grid grid-item3"><img class="grid-img" src="/src/car-mechanic-free-icon-font.svg" alt=""> </div>
+      <div class="grid grid-item3"><img class="grid-img" src="https://raw.githubusercontent.com/messerschmitte/ferrari-landing-page/d5fcea8da8b41e94c290a6e7fad52dea8b1a5a7e/src/car-mechanic-free-icon-font.svg" alt=""> </div>
       <div class="grid grid-item4"><h3 class="feature-heading">Reliable</h3>
       <p class="feature-text">We guarantee you won't have any problems.</p></div>
-      <div class="grid grid-item5"><img class="grid-img" src="/src/bolt-free-icon-font.svg" alt=""> </div>
+      <div class="grid grid-item5"><img class="grid-img" src="https://raw.githubusercontent.com/messerschmitte/ferrari-landing-page/d5fcea8da8b41e94c290a6e7fad52dea8b1a5a7e/src/bolt-free-icon-font.svg" alt=""> </div>
       <div class="grid grid-item6"><h3 class="feature-heading">Super fast</h3>
       <p class="feature-text">Known to have the fastest horses in the world.</p></div>
     </div>
